--- a/styles.css
+++ b/styles.css
@@ -352,3 +352,30 @@ body {
     background-color: #0c9c29cc;
     color: #ffffff;
 }
+
+.header {
+    width: 100%;
+    height: 120px;
+    background: #161b22;
+    display: flex;
+    align-items: center;
+    justify-content: center; /* centraliza o título */
+    position: relative;      /* permite posicionar a logo */
+    padding: 0 20px;
+}
+
+.logo {
+    height: 90%; 
+    width: auto;
+    object-fit: contain;
+
+    position: absolute;
+    left: 20px;  /* cola a logo no lado esquerdo */
+}
+
+.site-name {
+    color: #fff;
+    font-size: 28px;
+    font-weight: bold;
+    text-align: center;
+}
