--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
     /* Cores principais */
     --green-primary: #238636;
     --green-dark: #1e702e;
-    --purple-tab: #6f42c1;
+    --azul-tab: #383783;
 
     /* Calculadora */
     --calc-bg: #1f2428;
@@ -56,8 +56,8 @@ body {
 }
 
 .primary-button {
-    background-image: linear-gradient(to right, var(--green-primary), var(--green-dark));
-    box-shadow: 0 4px 6px -1px rgba(35, 134, 54, 0.4);
+   background-color: var(--azul-tab);
+    box-shadow: 0 4px 6px -1px rgba(3, 105, 223, 0.4);
     transition: opacity 0.2s, transform 0.2s;
 }
 
@@ -70,7 +70,6 @@ body {
     transform: translateY(0);
     box-shadow: none;
 }
-
 
 /* =====================================================================
    ABAS DE NAVEGAÇÃO
@@ -90,7 +89,7 @@ body {
 
 .tab-button.active {
     color: white;
-    background-color: var(--purple-tab);
+    background-color:var(--azul-tab);
     border-radius: 0.5rem;
     box-shadow: 0 0 10px rgba(111, 66, 193, 0.5);
 }
@@ -287,12 +286,12 @@ body {
    BOTÕES ESPECIAIS
    ===================================================================== */
 .btn-edit-goal {
-    width: 100%;
+    width: 40%;
     padding: 0.5rem 0;
     font-weight: bold;
     color: white;
     border-radius: 0.5rem;
-    background-color: var(--purple-tab);
+    background-color: #383783;
     cursor: pointer;
     transition: opacity 0.2s;
 }
@@ -352,59 +351,4 @@ body {
 #success-message {
     background-color: #0c9c29cc;
     color: #ffffff;
-}
-.header {
-    width: 100%;
-    height: 120px;
-    background: transparent; 
-    display: flex;
-    align-items: center;
-    justify-content: flex-start; /* deixa a logo à esquerda */
-    padding: 0 20px;
-}
-
-/* LOGO */
-.logo {
-    height: 90px;    /* tamanho padrão (desktop) */
-    width: auto;
-    object-fit: contain;
-}
-
-
-/* ===========================
-   RESPONSIVIDADE
-   =========================== */
-
-/* Tablet */
-@media (max-width: 768px) {
-    .header {
-        height: 100px;
-    }
-
-    .logo {
-        height: 80px;  /* grande no tablet */
-    }
-}
-
-/* Celular */
-@media (max-width: 480px) {
-    .header {
-        height: 90px;
-        padding-left: 15px;
-    }
-
-    .logo {
-        height: 75px;  /* 🔥 LOGO GRANDE NO CELULAR */
-    }
-}
-
-/* Celulares muito pequenos (ex: 320px) */
-@media (max-width: 360px) {
-    .header {
-        height: 85px;
-    }
-
-    .logo {
-        height: 70px; /* ainda grande */
-    }
 }
