# meta_2025  versão do sst 0.20v controle de CDG 10.10V
# meta_2025

versão do sst 0.20v
controle de CDG 10.10V

 versão em testes
sobre atualização
---------------------
centralizar os butão
e numeros
---------------------

--- a/styles.css
+++ b/styles.css
@@ -238,14 +238,17 @@ body {
 }
 
 .calc-operator {
-    background-color: var(--btn-operator);
+    text-align: center;
+    background-color:var(--azul-tab);
 }
 
 .calc-equal {
+    text-align: center;
     background-color: var(--btn-equal);
 }
 
 .calc-clear {
+        text-align: center;
     background-color: var(--btn-clear);
 }
 
