--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body {
     background-color: rgba(22, 27, 34, 0.95);
     -webkit-backdrop-filter: blur(5px);
     backdrop-filter: blur(5px);
-    
+
 }
 
 /* =====================================================================
@@ -80,6 +80,7 @@ body {
     font-weight: 600;
     cursor: pointer;
     transition: all 0.2s;
+     border-radius: 12px 28px;
 }
 
 .tab-button:not(.active),
@@ -89,10 +90,47 @@ body {
 }
 
 .tab-button.active {
-    color: white;
-    background-color: var(--azul-tab);
-    border-radius: 0.5rem;
-    box-shadow: 0 0 10px rgba(111, 66, 193, 0.5);
+    
+     position: relative;
+    padding: 10px 18px;
+    background: transparent;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 8px;
+    transition: background 0.25s ease, transform 0.15s ease;
+}
+
+/* underline suave */
+.tab-button::after {
+    content: "";
+    position: absolute;
+    bottom: 4px;
+    left: 50%;
+    width: 0;
+    height: 2px;
+    background: #383783;
+    border-radius: 4px;
+    transform: translateX(-50%);
+    transition: width 0.25s ease;
+}
+
+/* botão ativo */
+.tab-button.active {
+    color: #ffffff;
+}
+
+/* hover suave */
+.tab-button.active:hover::after {
+    width: 70%;
+}
+
+/* clique suave */
+.tab-button.active:active {
+    transform: scale(0.96);
+    transition: transform 0.1s ease;
+    
 }
 
 /* =====================================================================
@@ -114,6 +152,7 @@ body {
     border-radius: 9999px;
     background-color: #4f46e5;
     transition: width 0.3s ease;
+    
 }
 
 /* =====================================================================
@@ -135,6 +174,7 @@ body {
     background: linear-gradient(90deg, transparent, #7c3aed, #06b6d4, transparent);
     margin: 1.5rem 0;
     border-radius: 2px;
+    
 }
 
 /* =====versao===== */
@@ -145,7 +185,7 @@ body {
     display: inline-flex;
     align-items: center;
     gap: 6px;
-    border-radius: 10px;
+    border-radius: 10px 33px;
     border: 1px solid #1f2937;
     margin: 20px auto;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.25);
