# meta_2025  versão do sst 1.1.20v controle de CDG 20.20V    versão em testes
# meta_2025

versão do sst 1.1.20v
controle de CDG 20.20V

 versão em testes

--- a/styles.css
+++ b/styles.css
@@ -468,8 +468,6 @@ body {
     background-color: #0c9c29cc;
     color: #ffffff;
 }
-
-/* novo sistema */
 /* ======= TÍTULO PROFISSIONAL: HOLOGRAMA PREMIUM ======= */
 
 .pro-title {
@@ -542,3 +540,4 @@ body {
         opacity: 0.18;
     }
 }
+/* novo sistemas */
